--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ p {
     font-size: 24px;
 }
 .contact__rights {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .contact__title {
@@ -633,13 +633,12 @@ p {
         margin-bottom: 30px;
         
     }
-    
     .major__title, .major__description {
         width: 100%;
         text-align: center;
     }
     .school{
-        width: 200px;
+        width: 100%;
         margin: 0 auto;
     }
     .skillset {
@@ -652,6 +651,7 @@ p {
     }
     .project {
         width: 100%;
+        height: 100%;
     }
 
     .testimonial {
