--- a/style.css
+++ b/style.css
@@ -285,46 +285,6 @@ p {
    font-size: var(--font-small); 
    
 }
-.school-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex-basis: 25%;
-    background-color: #999999;
-    padding: 20px;
-    padding-left: 0;
-}
-.school {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-}
-.school:last-child {
-    margin: 0;
-}
-
-.school__description {
-    margin: 0 16px;
-    text-align: right;
-}
-
-.school__name,
-.school__period {
-    color: #fff;
-}
-
-.school__name {
-    font-size: var(--font-small);
-}
-
-.school__period {
-    font-size: var(--font-micro);
-}
-
-.school__logo {
-    width: 30px;
-    height: 30px;
-}
 
 /* Skill */
 #skills {
@@ -581,16 +541,52 @@ p {
     display: block;
     margin: 0 auto;
 }
-.sub-img2-box{
-    padding-top: 100px;
-}
-.sub-img2{
+.sub-box{
     width: 100%;
-    max-width: 500px;
-    text-align: center;
-    display: block;
+    height: 7567px;
+    max-width: 1200px;
     margin: 0 auto;
+    position: relative;
+    background: url(./imgs/projects/interpark-ticket-page.jpg);
 }
+.sub-box2{
+    width: 100%;
+    height: 4696px;
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    background: url(./imgs/projects/seocho-page.jpg);
+}
+.sub-box3{
+    width: 100%;
+    height: 5196px;
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    background: url(./imgs/projects/roche-page.jpg);
+}
+.sub-box a{
+    position: absolute;
+    width: 257px;
+    height: 64px;
+    left: 638px;
+    top: 122px;
+}
+.sub-box2 a{
+    position: absolute;
+    width: 257px;
+    height: 64px;
+    left: 638px;
+    top: 122px;
+}
+.sub-box3 a{
+    position: absolute;
+    width: 257px;
+    height: 64px;
+    left: 638px;
+    top: 122px;
+}
+
 /* 서브2 */
 
 /* For below 768px screen width */
@@ -602,7 +598,15 @@ p {
         --font-small: 14px;
         --font-micro: 12px;
     }
-
+    .home__description{
+        font-size: 14px;
+    }
+    .section__container p{
+        font-size: 14px;
+    }
+    .section__container h3{
+        font-size: 14px;   
+    }
     #home{
         width: 100%;
     }
@@ -711,5 +715,44 @@ p {
         font-size: 16px;
     }
     
+.sub-box{
+    width: 100%;
+    height: 7567px;
+    margin: 0 auto;
+    position: relative;
+}
+.sub-box2{
+    width: 100%;
+    height: 4696px;
+    margin: 0 auto;
+    position: relative;
+}
+.sub-box3{
+    width: 100%;
+    height: 5196px;
+    margin: 0 auto;
+    position: relative;
+}
+.sub-box a{
+    position: absolute;
+    width: 257px;
+    height: 64px;
+    left: 638px;
+    top: 122px;
+}
+.sub-box2 a{
+    position: absolute;
+    width: 257px;
+    height: 64px;
+    left: 638px;
+    top: 122px;
+}
+.sub-box3 a{
+    position: absolute;
+    width: 257px;
+    height: 64px;
+    left: 638px;
+    top: 122px;
+}
 }
 
