--- a/style.css
+++ b/style.css
@@ -114,22 +114,26 @@ p {
 
 .navbar__menu {
     display: flex;
-
+}
+.navbar__menu a{
+    padding: 8px 12px;
+    margin: 0 4px;   
+    color: #000000;
 }
 
-#navbar.navbar--dark {
-    background-color: var(--color-blue);
-    padding: 1px;
-    padding: 16px;
-    transition: all var(--animation-duration) ease-in-out;
-}
-
-
-.navbar__logo a{
+#navbar__logo{
     font-size: var(--font-medium);
     font-weight: var(--weight-semi-bold);
     color: black;
 }
+#navbar.navbar--dark {
+    background-color: #73aace;
+    color: #ffffff;
+    padding: 8px 12px;
+    margin: 0 4px;   
+    transition: all var(--animation-duration) ease-in-out;
+}
+
 
 
 .navbar__menu__item {
@@ -165,6 +169,16 @@ p {
     padding: 40px;
     padding-top: 120px;
     text-align: center;
+}
+#home2 {
+    background-color: #e0e0e0;
+    padding: 40px;
+    padding-top: 120px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    
+
 }
 
 .home__avatar {
@@ -234,6 +248,9 @@ p {
 #aboutskills{
     padding: 0 50px;
     margin-top: 100px;
+}
+#aboutskills h1{
+    padding-top: 70px;
 }
 .about__majors {
     display: flex;
@@ -345,6 +362,10 @@ p {
 /* Work */
 #work{
     margin-top: 100px;
+    background-color: #eeeeee;
+}
+#work h1{ 
+    padding-top: 70px;
 }
 .work__categories {
     margin: 40px;
@@ -356,6 +377,7 @@ p {
     font-size: var(--font-regular);
     padding: 8px 48px;
     position: relative;
+    background-color: white;
 }
 
 .category__btn.selected,
@@ -390,7 +412,6 @@ p {
   flex-wrap: wrap;
   justify-content: center;
   opacity: 1;
-  margin-bottom: 20px;
   transition: all var(--animation-duration) ease-out;
 }
 
@@ -481,7 +502,6 @@ p {
 
 /* Contact */
 #contact {
-    margin-top: 50px;
     padding: 50px 0;
     background-color:#ddd;
 }
@@ -512,7 +532,7 @@ p {
 }
 
 .contact__title{
-    font-size: 36px;
+    font-size: 26px;
 }
 /* Scroll */
 .arrow-up {
@@ -532,38 +552,47 @@ p {
     opacity: 1;
     pointer-events: auto;
 } 
-
 .sub-img{
-    padding-top: 100px;
+
     width: 100%;
     max-width: 500px;
     text-align: center;
     display: block;
     margin: 0 auto;
 }
+.sub-img2{
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+.sub-img2-box{
+    display: flex;
+    text-align: center;
+    margin: 0 auto;
+}
 .sub-box{
     width: 100%;
-    height: 7567px;
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
-    background: url(./imgs/projects/interpark-ticket-page.jpg);
 }
 .sub-box2{
     width: 100%;
-    height: 4696px;
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
-    background: url(./imgs/projects/seocho-page.jpg);
 }
 .sub-box3{
     width: 100%;
-    height: 5196px;
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
-    background: url(./imgs/projects/roche-page.jpg);
+}
+.show{
+    width: 100%;
+    max-width: 1200px;
 }
 .sub-box a{
     position: absolute;
@@ -588,7 +617,17 @@ p {
 }
 
 /* 서브2 */
-
+#gototop{
+    width: 80px;
+    height: 80px;
+    display: block;
+    color: black;
+    font-size: 50px;
+    text-align: center;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+  } 
 /* For below 768px screen width */
 @media screen and (max-width: 768px) {
     :root {
@@ -714,45 +753,54 @@ p {
     .contact__title{
         font-size: 16px;
     }
-    
-.sub-box{
-    width: 100%;
-    height: 7567px;
-    margin: 0 auto;
-    position: relative;
-}
-.sub-box2{
-    width: 100%;
-    height: 4696px;
-    margin: 0 auto;
-    position: relative;
-}
-.sub-box3{
-    width: 100%;
-    height: 5196px;
-    margin: 0 auto;
-    position: relative;
-}
-.sub-box a{
-    position: absolute;
-    width: 257px;
-    height: 64px;
-    left: 638px;
-    top: 122px;
-}
-.sub-box2 a{
-    position: absolute;
-    width: 257px;
-    height: 64px;
-    left: 638px;
-    top: 122px;
-}
-.sub-box3 a{
-    position: absolute;
-    width: 257px;
-    height: 64px;
-    left: 638px;
-    top: 122px;
-}
+        
+    .sub-box{
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+    }
+    .sub-box2{
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+    }
+    .sub-box3{
+        width: 100%;
+        margin: 0 auto;
+        position: relative;
+    }
+    .sub-box a{
+        position: absolute;
+        width: 257px;
+        height: 64px;
+        left: 638px;
+        top: 122px;
+    }
+    .sub-box2 a{
+        position: absolute;
+        width: 257px;
+        height: 64px;
+        left: 638px;
+        top: 122px;
+    }
+    .sub-box3 a{
+        position: absolute;
+        width: 257px;
+        height: 64px;
+        left: 638px;
+        top: 122px;
+    }
+    .sub-box img{
+        width: 100%;
+        text-align: center;
+    }
+    .sub-box2 img{
+        text-align: center;
+        width: 100%;
+    }
+    .sub-box3 img{
+        width: 100%;
+        text-align: center;
+    }
 }
 
